finish all endpoints
